fix: prevent scrollbar from being removed
some browsers, including on windows machines remove the scrollbar from viewport when the page is no longer scrollable causing shifts in ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -61,6 +61,7 @@ body {
   color: hsl(var(--foreground));
   background: hsl(var(--background));
   -webkit-font-smoothing: antialiased;
+  overflow-y: scroll;
 }
 
 @layer base {
